# rust-fullstack-app

./: .gitignore  compose.yml  docker-compose.yml
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml  index.html  main.ts
frontend/src/: main.rs
