[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { vesion = "0.3",features = ["console"] }
gloo = "0.11.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0"
